# motion_planning_alpha

./: .gitignore  ALL_run.sh  README.md  base_run.sh  mp_run.sh  mpo_run.sh  publish_topic.sh  run.py  run.sh  target_records  tree.txt  visualization.py  waypoints.txt
Others/Tools/: map_server.py
Plugins/Vehicle/: CarlaVehicleController.cpp  WheeledVehicleAIController.cpp
Plugins/Walker/: WalkerSpawnerBase.cpp  WalkerSpawnerBase.h
launch/: ALL.launch  base.launch  motion_planning.launch  mp.launch
src/autopilot_controller/: .gitignore  CMakeLists.txt  README.md  git_add.sh
src/autopilot_controller/AX7controller/: CMakeLists.txt
src/autopilot_controller/AX7controller/src/: AX7controller.cpp  AX7controller.hpp  main.cpp
src/autopilot_controller/AirSimController/: AirSim_parameters.ini  AirSim_runtime.ini
src/autopilot_controller/AirSimController/src/: AirSimcontroller.cpp  main.cpp
src/autopilot_controller/Controller/: CMakeLists.txt
src/autopilot_controller/Controller/include/: Controller.hpp  ControllerRuntimeParameters.hpp  draw_Controller.h  imutransform.hpp
src/autopilot_controller/Controller/src/: Controller.cpp  ControllerRuntimeParameters.cpp  Controller_ThreadFunc.cpp  Controller_interface.cpp  Controller_lcm.cpp  Controller_preprocessing.cpp  draw_Controller.cpp  imutransform.cpp  lateral_Controller.cpp  longitudinal_Controller.cpp
src/autopilot_controller/Documents/: LCM整理.md  Linux-RT on Raspberry Pi 3.md  平均时间测试报告.md
src/autopilot_controller/Geography/: GPS2GCJ.hpp  GaussLocalGeographicCS.hpp  Geography.hpp
src/autopilot_controller/Geography/private_hpps/: convert_coordinates.hpp  gausskruger.hpp
src/autopilot_controller/common/: CMakeLists.txt
src/autopilot_controller/common/include/: Circle.h  ECU.hpp  Line.h  MapMatching.hpp  MyLogger.hpp  NaviPoint.hpp  Path.hpp  Point.h  Rect.h  TCPClient.hpp  cau_heading_steering.h  color_util.h  heading.h  math_util.h  mytimer.hpp  nearest_point_on_spline.h  origin_vehicle.h  rotatematrix.h  spline.h  steering_angle.h
src/autopilot_controller/common/src/: Circle.cpp  ECU.cpp  ECU_draw_car.cpp  ECU_draw_path.cpp  Line.cpp  MapMatching.cpp  MyLogger.cpp  NaviPoint.cpp  Path.cpp  Point.cpp  Rect.cpp  TCPClient.cpp  cau_heading_steering.cpp  heading.cpp  mytimer.cpp  nearest_point_on_spline.cpp  origin_vehicle.cpp  rotatematrix.cpp  spline.cpp  steering_angle.cpp
src/autopilot_controller/config/: AX7_parameters.ini  AX7_runtime.ini  local.txt
src/autopilot_controller/msg/: brake_control_info.lcm  ins_info.lcm  map.lcm  nad_msg.cpp  nad_msg.h  nad_msg.lcm  nav_point.lcm  obu_msg.lcm
src/autopilot_controller/msg/nad_lcm/: block_info.hpp  block_of_route.hpp  cmd_request.hpp  cmd_respond.hpp  co_rsu_name_respond.hpp  cr_info_report.hpp  cr_obu_login_respond.hpp  cr_obu_logout_notify.hpp  cr_route_respond.hpp  cr_rsu_login_respond.hpp  cr_rsu_logout_notify.hpp  cr_set_ets_request.hpp  cr_start_auto_respond.hpp  crossing_of_route.hpp  csu_task_func_request.hpp  csu_task_func_respond.hpp  cu_alarm_report.hpp  cu_config_respond.hpp  cu_exec_task_respond.hpp  cu_info_report.hpp  cu_log_report.hpp  cu_oct_login_respond.hpp  cu_set_ets_respond.hpp  cu_stop_auto_notify.hpp  er_ets_report.hpp  lane_of_route.hpp  lane_point.hpp  light_info.hpp  light_of_route.hpp  limspeed_info.hpp  limspeed_of_route.hpp  map_point.hpp  obu_config.hpp  obu_control_event.hpp  obu_info.hpp  oc_rsu_name_request.hpp  or_change_lane_request.hpp  or_event_notify.hpp  or_info_report.hpp  or_obu_login_request.hpp  (+41 more)
src/autopilot_controller/msg/ne_msg/: header_t.hpp  ne_lcm.hpp  ne_msg_base_t.hpp  ne_msg_t.hpp
src/autopilot_controller/msg/obu_lcm/: CAN_status.hpp  CAN_value.hpp  accelerate_control_info.hpp  accelerate_feedback_info.hpp  brake_control_info.hpp  brake_feedback_info.hpp  control.lcm  gears_control_info.hpp  gears_feedback_info.hpp  gps_info.hpp  ins_info.hpp  map_line.hpp  map_points.hpp  mo_planning_request.hpp  nav_control_points.hpp  nav_points.hpp  obstacle_list.hpp  obstacle_t.hpp  obu_map_info.hpp  patch_grid.hpp  patch_t.hpp  point_t.hpp  rect_t.hpp  steering_control_info.hpp  steering_feedback_info.hpp
src/autopilot_controller/msg/session/: nad_session.cpp  nad_session.h  nad_session_list.cpp  nad_session_list.h
src/autopilot_controller/msg/timer/: nad_timer.cpp  nad_timer.h  nad_timer_list.cpp  nad_timer_list.h
src/autopilot_controller/test/: roadtest.txt
src/autopilot_controller/tools/controllerWatchdog/: CMakeLists.txt  README.md  controllerWatchdog.ini
src/autopilot_controller/tools/controllerWatchdog/src/: ControllerWatchdog.cpp  ControllerWatchdog.hpp  LCMFrequencyMeter.hpp  main.cpp
src/autopilot_controller/tools/controllerWatchdog/src/common/: MySystemAPI.cpp  MySystemAPI.hpp  TCPServerBase.cpp  TCPServerBase.hpp  mytimer.cpp  mytimer.hpp
src/autopilot_controller/tools/plotter/: README.md  rtplot.py
src/autopilot_controller/tools/tcpClient/: tcpClient.py
src/autopilot_map_server/: CMakeLists.txt
src/autopilot_map_server/include/Geography/: Geography.hpp
src/autopilot_map_server/launch/: load_route_map.launch  load_route_map_with_rviz.launch  route_map_rviz_cfg.rviz  rtk_mapping_rviz_cfg.rviz  rtk_mapping_with_rviz.launch
src/autopilot_map_server/map/: test.osm  test_yard.osm
src/autopilot_map_server/map/carla_map/: town01.osm  town01_base.osm  town01_calibration.cal
src/autopilot_map_server/map/changshu/: clear.osm  connected.osm  城乡道路环境语义拓扑地图-1112第二次更新.osm
src/autopilot_map_server/src/: map_server_node.cpp  rtk_mapping_node.cpp
src/autopilot_msgs/: CMakeLists.txt  README.md  package.xml
src/autopilot_msgs/docs/: 各模块输出及数据格式定义.md
src/autopilot_msgs/msg/: Location.msg  MotionState.msg  RouteArea.msg  RouteEdge.msg  RouteMap.msg  RouteNode.msg  RoutePath.msg  WayPoints.msg
src/autopilot_msgs/srv/: Map2WGS.srv  WGS2Map.srv
src/carla_ros_bridge/: CMakeLists.txt  client.launch
src/global_planner/: CMakeLists.txt  routemap.bag
src/motion_planner/: CMakeLists.txt  data.txt  pathnode.txt  referpath.txt  show.py
src/obstacle_ws/src/simple/: CMakeLists.txt  simple.cpp
(+40 files in other folders)
